After resolving IntelliJ-reported issues in com.srscicomp.fc.uibase